# httpc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  readme.md
include/: ba.h  httpc.h  internal_ba.h
source/: ba.c  header.c  httpc.c  httpc.header.c  httpc.method.c  httpc.request.c  httpc.response.c  internal_ba.c  method.c  request.c  response.c
test/: header_test.c  method_test.c  request_test.c  response_test.c  test_basics.c  test_request.c  test_response.c
test/include/: acutest.h
tests/: test-header.c  test-request.c  test-response.c  test-utils.c
utils/: allocator.c  allocator.h  array.c  array.h  list.c  list.h  logger.c  logger.h  macros.h
